# 3di-new

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: scop.yaml
configs/train/: scop_v2_default.yaml  scop_vq_baseline.yaml
data/: train_manifest.csv  val_manifest.csv
data/derived/pairfiles/: tmaln-06.assigned.out  (+3 more)
data/raw/: pdbs_train.txt  pdbs_val.txt
docs/: training.md  v2_data_layer_plan.md  v2_evaluation.md  v2_features_and_flags.md  v2_tier1_plan.md  v2_training.md  v2_training_plan.md  vqvae_modernization_recommendations.md
experiments/: README.md  alignment_batch_sampler.py  augmentation.py  rotation_trick.py
scripts/: build_training_arrays.py  compare_quantizers.py  create_submat.py  create_training_data.py  encode_pdbs.py  fetch_scop40_structures.py  make_splits.py  pt2kerasify.py  split_folds.py  train.py  train_v2.py
src/tdi/: __init__.py  encode.py  features.py  submat.py  training_data.py  util.py
tests/: test_compare_quantizers.py  test_experiments.py  test_quantizer_gradients.py  test_training.py  test_v2_cli.py  test_v2_data_layer.py  test_v2_detailed.py  test_v2_features.py  test_v2_golden.py  test_v2_train_cli.py  test_v2_training.py
training/: README.md  create_submat.py  create_vqvae_training_data.py  crossval.sh  encode_pdbs.py  extract_pdb_features.py  kopt_and_crossval.ipynb  koptimization.sh  learnAlphabet.sh  pt2kerasify.py  run-benchmark.sh  run-smithwaterman.sh  split_folds.py  train_vqvae.py  util.py
training/supplementary/: alphabet_information_density.ipynb
(+32 files in other folders)
