[project]
name = "3di-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
