[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdi"
version = "0.1.0"
description = "3Di structural alphabet encoding: VQ-VAE training and PDB feature extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "lightning>=2.6.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>2.12",
]

[project.scripts]
tdi-v2 = "tdi.v2.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tdi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]

[tool.pyright]
include = ["src", "scripts", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
